@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9789 2005/04/08 03:16:38 riz Exp $
+$NetBSD: CHANGES,v 1.9790 2005/04/08 07:25:08 abs Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1943,3 +1943,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Added newt-0.51.6nb1 [riz 2005-04-07]
 	Added asterisk-1.0.7nb1 [riz 2005-04-07]
 	Added zaptel-netbsd-20050404 [riz 2005-04-07]
+	Updated cpuflags to 0.84 [abs 2005-04-08]
+
